# python-project-52

./: .gitignore  Makefile  README.md  coverage.xml  db.sqlite3  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: my-check.yml
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/fixtures/: labels.json
labels/migrations/: 0001_initial.py
labels/templates/labels/: create.html  delete.html  index.html  update.html
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/fixtures/: statuses.json
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
statuses/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/: settings.py  urls.py  views.py
task_manager/template/: index.html
task_manager/templates/: index.html
tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.json
tasks/migrations/: 0001_initial.py  0002_alter_task_labels.py  0002_task_labels_alter_task_executors_alter_task_status.py  0003_alter_task_author.py  0004_alter_task_author.py  0005_alter_task_name.py
tasks/templates/tasks/: create.html  delete.html  detail.html  index.html  update.html
templates/: base.html  index.html  login.html
users/: forms.py  tests.py  urls.py  views.py
users/fixtures/: users.json
users/templates/users/: delete.html  index.html  update.html
users/tests/: test_views.py
users/tests/fixtures/: users.json
