[project]
name = "python-project-52"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "dotenv>=0.9.9",
]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "venv",
    "*/migrations/*.py",
    "*/settings.py",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
