[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-bootstrap5>=26.2",
    "django-filter>=26.1",
    "dotenv>=0.9.9",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
